# ncs-faceid-cli

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
data/: faceid.sqlite3
scripts/: add_interactive_face_selection.sh  fix_cli_selected_monitor_profile.sh  push_to_ecr_latest_and_version.sh  unknown_red_boxes.sh  update_match_history_dedup.sh
src/faceid/: cli.py  db.py  engine.py  index.py  tracker.py
src/ncs_faceid_cli.egg-info/: SOURCES.txt
